# orquesta-terminal

./: .env.example  .gitignore  .npmrc  CLAUDE.md  README.md  SECURITY.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  server.ts  tsconfig.tsbuildinfo
.github/workflows/: build.yml  hello.yml  release-macos.yml  release-windows.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
app/api/hosted/upload/: route.ts
components/features/: AgentGrid.tsx  KanbanBoard.tsx  RailPanels.tsx  RemoteSessionModal.tsx  SettingsPanel.tsx  TerminalDock.tsx  TerminalSidebar.tsx
e2e/: app.spec.ts  kanban.spec.ts  tauri-mock.ts
hooks/: useHostedAuth.ts  useKanban.ts  useSocket.ts  useTauri.ts
lib/: cliSettings.ts  config.ts  ptyText.ts  tauri-proxy.ts
scripts/: install-tauri-deps.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  cloud.rs  daemon.rs  error.rs  fs.rs  ipc.rs  lib.rs  main.rs  pty.rs  state.rs
src/tui/: index.ts
